examples/mood/tests/evaluate/undefined_head_of_expression_path.mood.expected
-----------------
INPUT
----------------- 
pub fn test(): f64 {
  Oops::Bar
}

-----------------
OUTPUT
-----------------
Error: Undefined enum "Oops":
 --> undefined_head_of_expression_path.mood:2:3

  | pub fn test(): f64 {
2 |   Oops::Bar
  |   ^^^^ "Oops" is not defined.
  | }
