examples/mood/tests/evaluate/undefined_head_of_expression_path.mood
pub fn test(): f64 {
  Oops::Bar
}
